[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI/MainFrame.gd" type="Script" id=1]

[node name="Control" type="Control" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Panel" type="Panel" parent="." index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" index="0"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -93.0
margin_right = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 1
_sections_unfolded = [ "Custom Constants", "Margin", "Rect", "Theme" ]

[node name="ClansBtn" type="Button" parent="Panel/HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 180.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CLANS"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="ChestsBtn" type="Button" parent="Panel/HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_right = 360.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CHESTS"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="ItemsBtn" type="Button" parent="Panel/HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_right = 540.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "ITEMS"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="HomeBtn" type="Button" parent="Panel/HBoxContainer" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 720.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HOME"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="ShopBtn" type="Button" parent="Panel/HBoxContainer" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_right = 900.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SHOP"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="AuctionBtn" type="Button" parent="Panel/HBoxContainer" index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 900.0
margin_right = 1080.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "AUCTION"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="InAppBtn" type="Button" parent="Panel/HBoxContainer" index="6"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1080.0
margin_right = 1260.0
margin_bottom = 93.0
rect_min_size = Vector2( 180, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "IN APP"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="Panel/HBoxContainer/ClansBtn" to="." method="_on_ClansBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ChestsBtn" to="." method="_on_ChestsBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ItemsBtn" to="." method="_on_ItemsBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/HomeBtn" to="." method="_on_HomeBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ShopBtn" to="." method="_on_shopBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/AuctionBtn" to="." method="_on_AuctionBtn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/InAppBtn" to="." method="_on_InAppBtn_pressed"]
